# pgvl

./: CMakeLists.txt  COPYRIGHT  README.md  config.in
doc/: CMakeLists.txt  Doxyfile  Doxyfile.in
include/: BitmapImage.h  Image.h  ImageProcessing.h  Point.h  pgvl.h  ppm.h
src/: BitmapImage.cpp  CMakeLists.txt  Image.cpp  ImageProcessing.cpp  ppm.cpp
tests/: BitmapImageTest.cpp  BitmapImageTest.h  CMakeLists.txt  CachePerformanceTest.cpp  ImageProcessingTest.cpp  ImageProcessingTest.h  ImageTest.cpp  ImageTest.h
tests/images/: office.0.ppm  office.1.ppm  rubic.0.pgm  rubic.1.pgm
